# MMSAFE-Bench

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
baselines/: .gitkeep.json
datasets/audio/: benign_speech.jsonl  harmful_speech.jsonl  voice_cloning.jsonl
datasets/cross_modal/: text_to_image_injection.jsonl
datasets/image/: benign_generation.jsonl  unsafe_generation.jsonl
datasets/text/: benign_prompts.jsonl  mlcommons_hazards.jsonl
datasets/video/: benign_generation.jsonl  unsafe_generation.jsonl
deploy/systemd/: lowresource-monitor.service  mmsafe-v100-eval.service  mmsafe-waiter.service
docs/: A100_AUTOMATION_RUNBOOK.md  GPU_ALLOCATION_POLICY.md
docs/ops/: 2026-02-24-runtime-status.md
mmsafe/: __init__.py  __main__.py  cli.py
mmsafe/_internal/: __init__.py  concurrency.py  hardware.py  hashing.py  logging.py  retry.py
mmsafe/attacks/: __init__.py  adversarial_suffix.py  base.py  composite.py  cross_modal.py  encoding.py  jailbreak.py  multi_turn.py  passthrough.py  registry.py  role_play.py  translation.py
mmsafe/config/: __init__.py  models.py  settings.py
mmsafe/config/defaults/: audio_eval.yaml  edge_simulation.yaml  full_eval.yaml  full_eval_a100_ready.yaml  full_eval_v100_clean_20260224.yaml  (+3 more)
mmsafe/datasets/: __init__.py  loader.py
mmsafe/edge/: __init__.py  constraints.py  profiles.py  simulator.py
mmsafe/judges/: __init__.py  base.py  composite_judge.py  human_eval.py  keyword_judge.py  llm_judge.py  nsfw_classifier.py  registry.py  toxicity_judge.py
mmsafe/metrics/: __init__.py  aggregator.py  safety_metrics.py  statistical.py
mmsafe/pipeline/: __init__.py  checkpointing.py  executor.py  result_types.py  runner.py
mmsafe/providers/: __init__.py  anthropic.py  base.py  elevenlabs.py  google.py  local_ollama.py  local_vllm.py  openai.py  rate_limiter.py  registry.py  replicate.py  stub.py
mmsafe/reporting/: __init__.py  charts.py  html_reporter.py  json_reporter.py  leaderboard.py  markdown_reporter.py
mmsafe/taxonomy/: __init__.py  categories.py
scripts/: check_eval_regression.py  seed_datasets.py  validate_datasets.py  wait_and_run_full_eval.sh
scripts/ops/: monitor_lowresource.sh  notify_telegram.sh  run_full_eval_v100.sh
tests/: conftest.py
tests/integration/: test_runner_integration.py
tests/unit/: test_aggregator.py  test_attacks.py  test_cli.py  test_config.py  test_datasets.py  test_edge.py  test_executor.py  test_hardware.py  test_human_eval.py  test_internal_concurrency.py  test_internal_hashing.py  test_internal_retry.py  test_judges.py  test_llm_judge.py  test_metrics.py  test_pipeline.py  test_providers.py  test_reporting.py  test_runner.py  test_taxonomy.py
(+2 files in other folders)
